kubernetes/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
      app: solar-system
        name: solar-system
          namespace: _{_NAMESPACE_}_
          spec:
            replicas: _{_REPLICAS_}_
              selector:
                  matchLabels:
                        app: solar-system
                          strategy: {}
                            template:
                                metadata:
                                      labels:
                                              app: solar-system
                                                  spec:
                                                        imagePullSecrets:
                                                                - name: jfrog-regcred
                                                                      containers:
                                                                            - image: _{_IMAGE_}_
                                                                                    imagePullPolicy: Always
                                                                                            name: solar-system
                                                                                                    ports:
                                                                                                            - containerPort: 3000
                                                                                                                      name: http
                                                                                                                                protocol: TCP
